# about-clean-code-email-example-python

./: .gitignore  LICENSE  README.md  pyproject.toml
src/sending_mails/adapters/: html_mail.py  i_mail_client.py  m_mail_client_adapter.py
src/sending_mails/cli/: program.py
src/sending_mails/core/: contracts.py  i_configuration_reader.py  i_mail_client.py
src/sending_mails/core/entities/: internal_error_mail.py  network_failure_mail.py  test_details.py
src/sending_mails/core/interfaces/: i_test_results_repository.py
src/sending_mails/io/: m_configuration_reader.py  m_mail_client.py  m_test_database_client.py
src/sending_mails/use_cases/: mail_notification_interactor.py
tests/: test_adapters.py
