[tool.poetry]
name = "about-clean-code-email-example-python"
version = "0.1.0"
description = ""
authors = ["https://github.com/dclimber"]
license = "MIT"
readme = "README.md"
packages = [{include = "about_clean_code_email_example-python"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
